# app/Http/Controllers/Api/V1/UserController.php
@@ -191,6 +191,86 @@ class UserController extends Controller
      *      )
      *  )
      */
+
+     /**
+     * @OA\Post(
+     *      path="/api/v1/admin/create",
+     *      tags={"Admin"},
+     *      summary="Create an Admin account",
+     *      operationId="store",
+     *      security={{"bearerAuth":{}}},
+     *      @OA\RequestBody(
+     *         required=true,
+     *         description="Request properties",
+     *         @OA\MediaType(
+     *             mediaType="application/x-www-form-urlencoded",
+     *             @OA\Schema(
+     *                 required={"first_name","last_name", "email", "password", "password_confirmation", "address", "phone_number"},
+     *                 @OA\Property(
+     *                     property="first_name",
+     *                     description="User firstname",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="last_name",
+     *                     description="User lastname",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     description="User email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     description="User password",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password_confirmation",
+     *                     description="User password",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="address",
+     *                     description="User main address",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="phone_number",
+     *                     description="User main phone number",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="is_marketing",
+     *                     description="User marketing preference",
+     *                     type="string"
+     *                 )
+     *             )
+     *         )
+     *      ),
+     *      @OA\Response(
+     *         response=200,
+     *         description="Successful operation"
+     *      ),
+     *      @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *      ),
+     *      @OA\Response(
+     *         response=404,
+     *         description="Page not found"
+     *      ),
+     *      @OA\Response(
+     *         response=422,
+     *         description="Unprocessable Entity"
+     *      ),
+     *      @OA\Response(
+     *         response=500,
+     *         description="Internal Server error"
+     *      )
+     *  )
+     */
     public function store(Request $request)
     {
         $validator = Validator::make($request->all(), [
