# storage/api-docs/api-docs.json
@@ -285,12 +285,12 @@
                 ]
             }
         },
-        "/api/v1/user/login": {
+        "/api/v1/admin/login": {
             "post": {
                 "tags": [
-                    "User"
+                    "Admin"
                 ],
-                "summary": "Login a User account",
+                "summary": "Login an admin account",
                 "operationId": "login",
                 "requestBody": {
                     "description": "Request properties",
@@ -536,57 +536,6 @@
                 }
             }
         },
-        "/api/v1/admin/login": {
-            "post": {
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Login an admin account",
-                "operationId": "adminLogin",
-                "requestBody": {
-                    "description": "Request properties",
-                    "required": true,
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "required": [
-                                    "email",
-                                    "password"
-                                ],
-                                "properties": {
-                                    "email": {
-                                        "description": "User email",
-                                        "type": "string"
-                                    },
-                                    "password": {
-                                        "description": "User password",
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "404": {
-                        "description": "Page not found"
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity"
-                    },
-                    "500": {
-                        "description": "Internal Server error"
-                    }
-                }
-            }
-        },
         "/api/v1/user/orders": {
             "get": {
                 "tags": [
@@ -660,12 +609,12 @@
                 ]
             }
         },
-        "/api/v1/user/create": {
+        "/api/v1/admin/create": {
             "post": {
                 "tags": [
-                    "User"
+                    "Admin"
                 ],
-                "summary": "Create a User account",
+                "summary": "Create an Admin account",
                 "operationId": "store",
                 "requestBody": {
                     "description": "Request properties",
